--- a/Project16/Project16/Base.lproj/Main.storyboard
+++ b/Project16/Project16/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
+        <capability name="Map view configurations" minToolsVersion="14.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -15,8 +16,20 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fQ7-1b-VGg">
+                                <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                                <standardMapConfiguration key="preferredConfiguration"/>
+                            </mapView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="fQ7-1b-VGg" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="0mi-tp-56d"/>
+                            <constraint firstItem="fQ7-1b-VGg" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="D4w-Ir-Isv"/>
+                            <constraint firstItem="fQ7-1b-VGg" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="D71-bo-FS4"/>
+                            <constraint firstAttribute="bottom" secondItem="fQ7-1b-VGg" secondAttribute="bottom" id="kn3-UK-qzM"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="YPx-Sp-vdT"/>
                 </viewController>
