Add outlet to textview

--- a/Project19/Extension/Base.lproj/MainInterface.storyboard
+++ b/Project19/Extension/Base.lproj/MainInterface.storyboard
@@ -37,6 +37,7 @@
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="320" height="528"/>
                     <connections>
+                        <outlet property="script" destination="tVO-X1-3WP" id="dQO-o3-3xZ"/>
                         <outlet property="view" destination="zMn-AG-sqS" id="Qma-de-2ek"/>
                     </connections>
                 </viewController>
